Fix issue where page is visible without custom styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,6 +125,9 @@
 
 /* Everything for page */
 
+body {
+  visibility: hidden;
+}
 
 html, body {
   background-color: white;
